src/tests/cases/snapshots/jett__tests__cases__ui__enter_folder.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 16.0K (4 files), freed: 0 | /tmp/jett_tests/enter_folder                                                                                                                              
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────┐
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                        subfolder1/ (+1 descendants)                                                         │                                              │
│                                                                 8.0K (50%)                                                                  │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                    file3                     │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                  4.0K (25%)                  │
│                                        1 items; % of folder                                                                                 │                                              │
│                                        #1 file1         [####################################] 100%                                         │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                    file2                                                                    │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                 4.0K (25%)                                                                  │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
│                                                                                                                                             │                                              │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <t> - themes, <q> - quit                               DRY-RUN OFF
