src/tests/cases/snapshots/jett__tests__cases__ui__enter_folder_medium_width-2.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
                                                                                          
                                                                                          
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ██████████████████████████████subfolder1/ (+1 descendants)██████████████████████████████ 
 ███████████████████████████████████████8.0K (50%)███████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ██████████████1 items; % of folder██████████████████████████████████████████████████████ 
 ██████████████#1 file1         [####################################] 100%██████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
 ████████████████████████████████████████████████████████████████████████████████████████ 
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
                                                                                          
 SELECTED: subfolder1 (8.0K, 1 files)                                                     
                                                                                          

